kubernetes/kube-lab/apps/tekton-system/tekton/app/http-route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
spec:
  hostnames:
    - tekton.techtales.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tekton-dashboard
          port: 9097
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
