kubernetes/kube-lab/apps/tekton-system/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.techtales.io/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.techtales.io/oauth2/sign_in?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: CloudNative CI/CD
    gethomepage.dev/group: Development
    gethomepage.dev/icon: si-tekton
    gethomepage.dev/name: Tekton
    gethomepage.dev/pod-selector: app.kubernetes.io/name=dashboard
  labels:
    app.kubernetes.io/instance: tekton-dashboard
    app.kubernetes.io/name: tekton-dashboard
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
    - host: &host tekton.techtales.io
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - *host
      secretName: tekton-dashboard-tls
